# k8sql

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  EXAMPLES.md  LICENSE  Makefile  README.md  install.sh
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/memories/: project-preferences.md
src/: config.rs  main.rs  progress.rs
src/cli/: args.rs  mod.rs  repl.rs
src/daemon/: mod.rs  pgwire_server.rs
src/datafusion_integration/: context.rs  convert.rs  execution.rs  filter_extraction.rs  hooks.rs  json_path.rs  mod.rs  preprocess.rs  provider.rs  prql.rs
src/kubernetes/: cache.rs  client.rs  context_matcher.rs  discovery.rs  field_selectors.rs  mod.rs  resources.rs
src/output/: csv.rs  json.rs  mod.rs  table.rs  yaml.rs
src/sql/: ast.rs  executor.rs  mod.rs  parser.rs  planner.rs
tests/: TEST_COVERAGE.md
tests/integration/: cleanup.sh  lib.sh  run-tests.sh  setup-clusters.sh
tests/integration/fixtures/: test-config-resources.yaml  test-crd-2.yaml  test-crd-multiversion.yaml  test-crd.yaml  test-resources.yaml  test-widget-resources.yaml
tests/integration/tests/: 01-basic-queries.sh  02-multi-cluster.sh  03-crd-discovery.sh  04-filter-pushdown.sh  05-output-formats.sh  06-error-handling.sh  07-repl-mode.sh  08-daemon-mode.sh  09-batch-multi-context.sh  10-sql-operators.sh  11-sql-aggregations.sh  12-json-operations.sh  13-string-functions.sh  14-datetime-and-edge-cases.sh  15-joins.sh  16-subqueries.sh  17-window-functions.sh  18-data-validation.sh  19-different-crds-per-cluster.sh  20-file-based-queries.sh  21-fq-names-and-multiversion.sh  22-metrics-api.sh  23-prql-parity.sh  24-complex-filters.sh  25-stress.sh
