[package]
name = "k8sql"
version = "0.1.0"
edition = "2024"
authors = ["Nikolay Denev <ndenev@gmail.com>"]
license = "BSD-3-Clause"
description = "Query Kubernetes with SQL"
repository = "https://github.com/ndenev/k8sql"

[dependencies]
# SQL query engine (Apache Arrow DataFusion)
datafusion = "51"
datafusion-functions-json = "0.51"

# Kubernetes client
kube = { version = "2", features = ["runtime", "client", "derive", "rustls-tls", "http-proxy"] }
k8s-openapi = { version = "0.26", features = ["v1_32"] }

# TLS provider for rustls (aws-lc-rs preferred for performance)
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }

# PostgreSQL wire protocol (for daemon mode)
datafusion-postgres = "0.13"

# REPL / CLI
rustyline = { version = "17", features = ["derive"] }
indicatif = "0.18"
console = "0.16"
comfy-table = "7"
dirs = "6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing for cache fingerprints
sha2 = "0.10"
hex = "0.4"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Futures
futures = "0.3"

# Async trait support
async-trait = "0.1"

# YAML output
serde_yaml = "0.9"

# Regex for LIKE pattern matching
regex = "1"


