[package]
name = "k8sql"
version = "0.2.4"
edition = "2024"
authors = ["Nikolay Denev <ndenev@gmail.com>"]
license = "BSD-3-Clause"
description = "Query Kubernetes with SQL"
repository = "https://github.com/ndenev/k8sql"
readme = "README.md"
keywords = ["kubernetes", "sql", "k8s", "datafusion", "cli"]
categories = ["command-line-utilities", "database"]

[dependencies]
# SQL query engine (Apache Arrow DataFusion)
datafusion = { version = "52.0.0", default-features = false, features = [
    "nested_expressions",
    "datetime_expressions",
    "regex_expressions",
    "string_expressions",
    "unicode_expressions",
    "sql",
    "recursive_protection",
] }
datafusion-functions-json = "0.52.0"

# PRQL compiler (alternative query language)
prqlc = "0.13"

# Kubernetes client
kube = { version = "3.0.0", features = ["runtime", "client", "derive", "rustls-tls", "http-proxy"] }
k8s-openapi = { version = "0.27.0", features = ["v1_32"] }
k8s-metrics = "0.27.0"

# TLS provider for rustls (aws-lc-rs preferred for performance)
rustls = { version = "0.23.36", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }

# PostgreSQL wire protocol (for daemon mode)
datafusion-postgres = "0.14.0"

# REPL / CLI
rustyline = { version = "17.0.2", features = ["derive"] }
indicatif = "0.18.3"
console = "0.16.2"
comfy-table = "7.2.2"
dirs = "6.0.0"

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# Random number generation (for retry jitter)
fastrand = "2.3.0"

# CLI argument parsing
clap = { version = "4.5.56", features = ["derive"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Date/time
chrono = "0.4.43"

# Error handling
anyhow = "1.0.100"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-rolling-file = { version = "0.1.3", features = ["non-blocking"] }

# Futures
futures = "0.3.31"

# Async streaming
async-stream = "0.3.6"

# Async trait support
async-trait = "0.1.89"

# YAML output
serde_yaml = "0.9.34"

# Regex for LIKE pattern matching
regex = "1.12.2"

lazy-regex = "3.5.1"

# Atomic file operations
tempfile = "3.24.0"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = "z"  # Optimize for size

